feat : addCat wizard scene

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,4 @@
 add new dependency :
-https://github.com/telegraf/telegraf-ratelimit
+  https://github.com/telegraf/telegraf-ratelimit
+  
+add feature :
